--- a/src/app/components/modal-compra/modal-compra.component.html
+++ b/src/app/components/modal-compra/modal-compra.component.html
@@ -123,41 +123,59 @@
                             <div class="col-md-6 mb-3">
                                 <label for="telefono" class="form-label">Teléfono *</label>
                                 <input type="tel" id="telefono" class="form-control" [(ngModel)]="datosCliente.telefono"
-                                    name="telefono" required placeholder="Ej: +56 9 1234 5678">
+                                    name="telefono" required placeholder="Ej: +56 9 1234 5678" (ngModelChange)="onTelefonoChange()">
                             </div>
                             <div class="col-md-6 mb-3"></div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <label for="region" class="form-label">Región *</label>
-                                <!-- Selección de región para despacho -->
-                                <select id="region" class="form-select" [(ngModel)]="datosCliente.region" name="region"
-                                    required (change)="onRegionChange()">
-                                    <option value="">Seleccionar región</option>
-                                    <option *ngFor="let region of regiones" [value]="region.id">{{ region.nombre }}</option>
-                                </select>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <label for="comuna" class="form-label">Comuna *</label>
-                                <select id="comuna" class="form-select" [(ngModel)]="datosCliente.comuna" name="comuna"
-                                    required [disabled]="comunaDisabled">
-                                    <option value="">Seleccionar comuna</option>
-                                    <option *ngFor="let comuna of comunas" [value]="comuna.id">{{ comuna.nombre }}</option>
+
+                        <!-- Selector de direcciones si el usuario tiene direcciones guardadas -->
+                        <div class="row" *ngIf="direccionesUsuario.length > 0">
+                            <div class="col-12 mb-3">
+                                <label for="direccionSelector" class="form-label">Dirección de entrega *</label>
+                                <select id="direccionSelector" class="form-select" [(ngModel)]="direccionSeleccionada" 
+                                        name="direccionSelector" (change)="onDireccionChange()">
+                                    <option *ngFor="let direccion of direccionesUsuario" [value]="direccion.id">
+                                        {{ direccion.calle }} {{ direccion.numero }}, {{ direccion.comuna }}, {{ direccion.region }}
+                                        <span *ngIf="direccion.esPrincipal"> (Principal)</span>
+                                    </option>
+                                    <option value="nueva">Agregar nueva dirección</option>
                                 </select>
                             </div>
                         </div>
 
-                        <!-- Calle y Número -->
-                        <div class="row">
-                            <div class="col-md-8 mb-3">
-                                <label for="calle" class="form-label">Calle *</label>
-                                <input type="text" id="calle" class="form-control" [(ngModel)]="datosCliente.calle"
-                                    name="calle" required placeholder="Ej: Av. Libertador Bernardo O'Higgins">
+                        <!-- Formulario manual de dirección (siempre visible si no hay direcciones o se elige "nueva") -->
+                        <div *ngIf="mostrarFormularioDireccion || direccionesUsuario.length === 0">
+                            <div class="row">
+                                <div class="col-md-6 mb-3">
+                                    <label for="region" class="form-label">Región *</label>
+                                    <select id="region" class="form-select" [(ngModel)]="datosCliente.region" name="region"
+                                        required (change)="onRegionChange()">
+                                        <option value="">Seleccionar región</option>
+                                        <option *ngFor="let region of regiones" [value]="region.id">{{ region.nombre }}</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <label for="comuna" class="form-label">Comuna *</label>
+                                    <select id="comuna" class="form-select" [(ngModel)]="datosCliente.comuna" name="comuna"
+                                        required [disabled]="comunaDisabled">
+                                        <option value="">Seleccionar comuna</option>
+                                        <option *ngFor="let comuna of comunas" [value]="comuna.id">{{ comuna.nombre }}</option>
+                                    </select>
+                                </div>
                             </div>
-                            <div class="col-md-4 mb-3">
-                                <label for="numero" class="form-label">Número *</label>
-                                <input type="text" id="numero" class="form-control" [(ngModel)]="datosCliente.numero"
-                                    name="numero" required placeholder="Ej: 1234">
+
+                            <!-- Calle y Número -->
+                            <div class="row">
+                                <div class="col-md-8 mb-3">
+                                    <label for="calle" class="form-label">Calle *</label>
+                                    <input type="text" id="calle" class="form-control" [(ngModel)]="datosCliente.calle"
+                                        name="calle" required placeholder="Ej: Av. Libertador Bernardo O'Higgins">
+                                </div>
+                                <div class="col-md-4 mb-3">
+                                    <label for="numero" class="form-label">Número *</label>
+                                    <input type="text" id="numero" class="form-control" [(ngModel)]="datosCliente.numero"
+                                        name="numero" required placeholder="Ej: 1234">
+                                </div>
                             </div>
                         </div>
 
